--- a/QLKyTucXa/QLKyTucXa/Areas/Admin/Views/BaiViet/Index.cshtml
+++ b/QLKyTucXa/QLKyTucXa/Areas/Admin/Views/BaiViet/Index.cshtml
@@ -55,6 +55,12 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel-heading">
+            @if (TempData["AlertMessage"] != null)
+        {
+            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                @TempData["AlertMessage"]
+            </div>
+        }
             <h3>Danh sách bài viết</h3>
         </div>
         <div class="panel-body">
