--- a/QLKyTucXa/QLKyTucXa/Content/css/Homepage.css
+++ b/QLKyTucXa/QLKyTucXa/Content/css/Homepage.css
@@ -13,3 +13,33 @@
     margin: 0 auto;
     
 }
+
+.middle {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.news .media {
+    border-bottom: 1px dashed;
+    border-color: #d5dbe0;
+    padding-bottom: 10px;
+}
+
+.media:first-child {
+    margin-top: 0;
+}
+
+.media, .media .media {
+    margin-top: 15px;
+}
+
+.media, .media-body {
+    overflow: hidden;
+    zoom: 1;
+}
+
+.view-all {
+    padding: 0 15px 5px;
+    background: #fff;
+    text-align: right;
+}
